[package]
name = "iab"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iab"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
csv = "1.3"
